--- a/typescript/web-boilerplate/.eslintrc.yml
+++ b/typescript/web-boilerplate/.eslintrc.yml
@@ -26,3 +26,8 @@ rules:
   semi:
     - error
     - never
+  max-len: 
+  - error
+  - { code: 80 }
+  "@typescript-eslint/explicit-function-return-type": "off"
+  "@typescript-eslint/explicit-module-boundary-types": "off"
