--- a/typescript/web-boilerplate/package.json
+++ b/typescript/web-boilerplate/package.json
@@ -12,11 +12,14 @@
   },
   "dependencies": {
     "koa": "^2.12.1",
+    "koa-router": "^9.0.1",
+    "module-alias": "^2.2.2",
     "pino": "^6.3.2"
   },
   "devDependencies": {
     "@types/koa": "^2.11.3",
     "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa-router": "^7.4.1",
     "@types/pino": "^6.3.0",
     "@typescript-eslint/eslint-plugin": "^3.2.0",
     "@typescript-eslint/parser": "^3.2.0",
@@ -30,6 +33,6 @@
     "typescript": "^3.9.5"
   },
   "_moduleAliases": {
-    "@logger": "./src/logger"
+    "@logger": "./src/infra/logger"
   }
 }
