ϋ refactor: Remove @logger in favor of @infra/logger

--- a/typescript/web-boilerplate/package.json
+++ b/typescript/web-boilerplate/package.json
@@ -37,6 +37,6 @@
     "typescript": "^3.9.5"
   },
   "_moduleAliases": {
-    "@logger": "./src/infra/logger"
+    "@infra": "./src/infra/"
   }
 }
