π test: Add testing setup

--- a/typescript/web-boilerplate/.eslintrc.yml
+++ b/typescript/web-boilerplate/.eslintrc.yml
@@ -31,3 +31,7 @@ rules:
   - { code: 80 }
   "@typescript-eslint/explicit-function-return-type": "off"
   "@typescript-eslint/explicit-module-boundary-types": "off"
+overrides:
+  - files: ["*.test.ts"]
+    rules:
+      '@typescript-eslint/no-var-requires': 'off'
