--- a/typescript/web-boilerplate/package.json
+++ b/typescript/web-boilerplate/package.json
@@ -8,7 +8,9 @@
     "start:prod": "node src",
     "build": "tsc",
     "build:clean": "find src -type f -name '*.js' -exec rm {} \\;",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "mocha -r ts-node/register src/**/*.test.ts",
+    "test:watch": "yarn test --watch --reporter min"
   },
   "dependencies": {
     "fp-ts": "^2.6.5",
@@ -21,22 +23,29 @@
     "pino": "^6.3.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.11",
     "@types/koa": "^2.11.3",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-router": "^7.4.1",
+    "@types/mocha": "^7.0.2",
     "@types/pino": "^6.3.0",
     "@typescript-eslint/eslint-plugin": "^3.2.0",
     "@typescript-eslint/parser": "^3.2.0",
+    "chai": "^4.2.0",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "koa-bodyparser": "^4.3.0",
+    "mocha": "^8.0.1",
     "pino-pretty": "^4.0.0",
     "prettier": "^2.0.5",
+    "testdouble": "^3.16.0",
+    "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.47",
     "typescript": "^3.9.5"
   },
   "_moduleAliases": {
-    "@infra": "./src/infra/"
+    "@infra": "./src/infra/",
+    "@test": "./test/helper"
   }
 }
