--- a/typescript/web-boilerplate/package.json
+++ b/typescript/web-boilerplate/package.json
@@ -4,10 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "tsnd --clear --no-notify src/index.ts | pino-pretty",
+    "start": "PGDATABASE=my-app tsnd --rs false --clear --no-notify src/index.ts | pino-pretty",
     "start:prod": "node src",
-    "build": "tsc",
-    "build:clean": "find src -type f -name '*.js' -exec rm {} \\;",
+    "ts": "tsc",
+    "ts:clean": "find src -type f -name '*.js' -exec rm {} \\;",
+    "db:build": "pgtyped -c pgconfig.json",
+    "db:migrate": "node migrations/setup/ensure-db && db-migrate",
     "lint": "eslint",
     "test": "mocha -r ts-node/register src/**/*.test.ts",
     "test:watch": "yarn test --watch --reporter min"
@@ -20,18 +22,24 @@
     "koa": "^2.12.1",
     "koa-router": "^9.0.1",
     "module-alias": "^2.2.2",
+    "pg": "^8.2.1",
     "pino": "^6.3.2"
   },
   "devDependencies": {
+    "@pgtyped/cli": "^0.7.3",
+    "@pgtyped/query": "^0.7.3",
     "@types/chai": "^4.2.11",
     "@types/koa": "^2.11.3",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-router": "^7.4.1",
     "@types/mocha": "^7.0.2",
+    "@types/pg": "^7.14.3",
     "@types/pino": "^6.3.0",
     "@typescript-eslint/eslint-plugin": "^3.2.0",
     "@typescript-eslint/parser": "^3.2.0",
     "chai": "^4.2.0",
+    "db-migrate": "^0.11.11",
+    "db-migrate-pg": "^1.2.2",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
