--- a/typescript/web-boilerplate/package.json
+++ b/typescript/web-boilerplate/package.json
@@ -22,6 +22,7 @@
     "koa": "^2.12.1",
     "koa-router": "^9.0.1",
     "module-alias": "^2.2.2",
+    "mongodb": "^3.5.9",
     "pg": "^8.2.1",
     "pino": "^6.3.2"
   },
@@ -33,6 +34,7 @@
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-router": "^7.4.1",
     "@types/mocha": "^7.0.2",
+    "@types/mongodb": "^3.5.24",
     "@types/pg": "^7.14.3",
     "@types/pino": "^6.3.0",
     "@typescript-eslint/eslint-plugin": "^3.2.0",
