ω fix: Fix references broken by hexagonal architecture refactoring

--- a/typescript/web-boilerplate/package.json
+++ b/typescript/web-boilerplate/package.json
@@ -55,7 +55,8 @@
     "typescript": "^3.9.5"
   },
   "_moduleAliases": {
-    "@infra": "./src/infra/",
+    "@adapter": "./src/adapter/",
+    "@protocol": "./src/protocol/",
     "@test": "./test/helper"
   }
 }
