--- a/typescript/web-boilerplate/package.json
+++ b/typescript/web-boilerplate/package.json
@@ -39,6 +39,7 @@
     "@types/pino": "^6.3.0",
     "@typescript-eslint/eslint-plugin": "^3.2.0",
     "@typescript-eslint/parser": "^3.2.0",
+    "caller-path": "^3.0.0",
     "chai": "^4.2.0",
     "db-migrate": "^0.11.11",
     "db-migrate-pg": "^1.2.2",
