--- a/typescript/web-boilerplate/.eslintrc.yml
+++ b/typescript/web-boilerplate/.eslintrc.yml
@@ -14,9 +14,6 @@ parserOptions:
 plugins:
   - '@typescript-eslint'
 rules:
-  indent:
-    - error
-    - 2
   linebreak-style:
     - error
     - unix
@@ -26,6 +23,10 @@ rules:
   semi:
     - error
     - never
+  indent: 
+    - error 
+    - 2
+    - { "SwitchCase": 1 }
   max-len: 
   - error
   - { code: 80 }
