--- a/typescript/web-boilerplate/package.json
+++ b/typescript/web-boilerplate/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "PGDATABASE=my-app tsnd --rs false --clear --no-notify src/index.ts | pino-pretty",
+    "start": "env $(cat .env| grep -v \"#\" | xargs) tsnd --rs false --clear --no-notify src/index.ts | pino-pretty",
     "start:prod": "node src",
     "ts": "tsc",
     "ts:clean": "find src -type f -name '*.js' -exec rm {} \\;",
