--- a/typescript/web-boilerplate/package.json
+++ b/typescript/web-boilerplate/package.json
@@ -17,10 +17,12 @@
   "dependencies": {
     "@types/ramda": "^0.27.6",
     "fp-ts": "^2.6.5",
+    "glob": "^7.1.6",
     "io-ts": "^2.2.5",
     "io-ts-reporters": "^1.1.0",
     "io-ts-types": "^0.5.7",
     "koa": "^2.12.1",
+    "koa-respond": "^2.1.0",
     "koa-router": "^9.0.1",
     "module-alias": "^2.2.2",
     "mongodb": "^3.5.9",
@@ -33,6 +35,7 @@
     "@pgtyped/cli": "^0.8.0",
     "@pgtyped/query": "^0.7.3",
     "@types/chai": "^4.2.11",
+    "@types/glob": "^7.1.2",
     "@types/koa": "^2.11.3",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-router": "^7.4.1",
