--- a/typescript/web-boilerplate/tsconfig.json
+++ b/typescript/web-boilerplate/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
+    "esModuleInterop": true,
     "strict": true,
     "resolveJsonModule": true,
     "paths": {
@@ -23,6 +24,7 @@
     "moduleResolution": "node",
     "baseUrl": "./",
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "typeRoots": ["./node_modules/@types", "./src/transport/http/koa-respond.d.ts"]
   }
 }
