--- a/typescript/web-boilerplate/package.json
+++ b/typescript/web-boilerplate/package.json
@@ -11,11 +11,12 @@
     "db:build": "pgtyped -c pgconfig.json",
     "db:migrate": "node migrations/setup/ensure-db && db-migrate",
     "lint": "eslint",
-    "test": "mocha -r ts-node/register src/**/*.test.ts",
+    "test": "TS_NODE_TRANSPILE_ONLY=true mocha -r ts-node/register src/**/*.test.ts",
     "test:watch": "yarn test --watch --reporter min"
   },
   "dependencies": {
     "@types/ramda": "^0.27.6",
+    "chai-as-promised": "^7.1.1",
     "fp-ts": "^2.6.5",
     "glob": "^7.1.6",
     "io-ts": "^2.2.5",
@@ -35,6 +36,7 @@
     "@pgtyped/cli": "^0.8.0",
     "@pgtyped/query": "^0.7.3",
     "@types/chai": "^4.2.11",
+    "@types/chai-as-promised": "^7.1.2",
     "@types/glob": "^7.1.2",
     "@types/koa": "^2.11.3",
     "@types/koa-bodyparser": "^4.3.0",
