--- a/typescript/web-boilerplate/.eslintrc.yml
+++ b/typescript/web-boilerplate/.eslintrc.yml
@@ -26,7 +26,7 @@ rules:
   indent: 
     - error 
     - 2
-    - { "SwitchCase": 1 }
+    - { SwitchCase: 1, CallExpression: {arguments: 1} }
   max-len: 
   - error
   - { code: 80 }
