--- a/typescript/web-boilerplate/package.json
+++ b/typescript/web-boilerplate/package.json
@@ -11,7 +11,7 @@
     "db:build": "pgtyped -c pgconfig.json",
     "db:migrate": "node migrations/setup/ensure-db && db-migrate",
     "lint": "eslint",
-    "test": "TS_NODE_TRANSPILE_ONLY=true mocha -r ts-node/register src/**/*.test.ts",
+    "test": "TS_NODE_TRANSPILE_ONLY=true mocha -r ts-node/register --recursive \"src/**/*.test.ts\"",
     "test:watch": "yarn test --watch --reporter min"
   },
   "dependencies": {
