π test: Add missing dynamic route register routes

--- a/typescript/web-boilerplate/tsconfig.json
+++ b/typescript/web-boilerplate/tsconfig.json
@@ -25,6 +25,6 @@
     "baseUrl": "./",
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "typeRoots": ["./node_modules/@types", "./src/transport/http/koa-respond.d.ts"]
+    "typeRoots": ["./node_modules/@types", "./types"]
   }
 }
