--- a/typescript/web-boilerplate/package.json
+++ b/typescript/web-boilerplate/package.json
@@ -11,8 +11,10 @@
     "db:build": "pgtyped -c pgconfig.json",
     "db:migrate": "node migrations/setup/ensure-db && db-migrate",
     "lint": "eslint",
-    "test": "TS_NODE_TRANSPILE_ONLY=true mocha -r ts-node/register --recursive \"src/**/*.test.ts\"",
-    "test:watch": "yarn test --watch --reporter min"
+    "test": "mocha -r ts-node/register/transpile-only --recursive \"src/**/*.test.ts\"",
+    "test:watch": "yarn test --watch --reporter min",
+    "test:cover": "nyc yarn test",
+    "test:cover:open": "open coverage/lcov-report/index.html"
   },
   "dependencies": {
     "@types/ramda": "^0.27.6",
@@ -31,6 +33,7 @@
     "ramda": "^0.27.0"
   },
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@pgtyped/cli": "^0.8.0",
     "@pgtyped/query": "^0.7.3",
     "@types/chai": "^4.2.11",
@@ -52,8 +55,10 @@
     "eslint-plugin-prettier": "^3.1.3",
     "koa-bodyparser": "^4.3.0",
     "mocha": "^8.0.1",
+    "nyc": "^15.1.0",
     "pino-pretty": "^4.0.0",
     "prettier": "^2.0.5",
+    "source-map-support": "^0.5.19",
     "testdouble": "^3.16.0",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.47",
