θ chore: Add support for custom env

--- a/typescript/web-boilerplate/package.json
+++ b/typescript/web-boilerplate/package.json
@@ -4,12 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "env $(cat .env| grep -v \"#\" | xargs) tsnd --rs false --clear --no-notify src/index.ts | pino-pretty",
+    "start": "yarn db:migrate up && tsnd -r dotenv/config --rs false --clear --no-notify src/index.ts | pino-pretty",
     "start:prod": "node src",
-    "ts": "tsc",
-    "ts:clean": "find src -type f -name '*.js' -exec rm {} \\;",
+    "build": "tsc",
+    "build:clean": "find src test -type f -name '*.js' -exec rm {} \\;",
     "db:build": "pgtyped -c pgconfig.json",
-    "db:migrate": "node migrations/setup/ensure-db && db-migrate",
+    "db:migrate": "db-migrate",
     "lint": "eslint",
     "test": "mocha -r ts-node/register/transpile-only --recursive \"src/**/*.test.ts\"",
     "test:only": "mocha -r ts-node/register/transpile-only --watch --reporter min",
@@ -51,6 +51,7 @@
     "chai": "^4.2.0",
     "db-migrate": "^0.11.11",
     "db-migrate-pg": "^1.2.2",
+    "dotenv": "^8.2.0",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
