--- a/typescript/web-boilerplate/package.json
+++ b/typescript/web-boilerplate/package.json
@@ -4,12 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "yarn db:migrate up && tsnd -r dotenv/config --rs false --clear --no-notify src/index.ts | pino-pretty",
+    "dev": "run-p 'db:migrate up' start 'db:build -w'",
+    "start": "dotenv -- tsnd --rs false --no-notify src/index.ts | pino-pretty",
     "start:prod": "node src",
     "build": "tsc",
     "build:clean": "find src test -type f -name '*.js' -exec rm {} \\;",
-    "db:build": "pgtyped -c pgconfig.json",
-    "db:migrate": "db-migrate",
+    "db:build": "dotenv -- pgtyped -c pgconfig.json",
+    "db:migrate": "dotenv -- db-migrate",
     "lint": "eslint",
     "test": "mocha -r ts-node/register/transpile-only --recursive \"src/**/*.test.ts\"",
     "test:only": "mocha -r ts-node/register/transpile-only --watch --reporter min",
@@ -51,12 +52,13 @@
     "chai": "^4.2.0",
     "db-migrate": "^0.11.11",
     "db-migrate-pg": "^1.2.2",
-    "dotenv": "^8.2.0",
+    "dotenv-cli": "^3.2.0",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "koa-bodyparser": "^4.3.0",
     "mocha": "^8.0.1",
+    "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "pino-pretty": "^4.0.0",
     "prettier": "^2.0.5",
