Σ feat: Transpile only when in watch mode

--- a/typescript/web-boilerplate/package.json
+++ b/typescript/web-boilerplate/package.json
@@ -12,9 +12,9 @@
     "db:build": "dotenv -- pgtyped -c pgconfig.json",
     "db:migrate": "dotenv -- db-migrate",
     "lint": "eslint",
-    "test": "mocha -r ts-node/register/transpile-only --recursive \"src/**/*.test.ts\"",
+    "test": "mocha -r ts-node/register --recursive 'src/**/*.test.ts'",
     "test:only": "mocha -r ts-node/register/transpile-only --watch --reporter min",
-    "test:watch": "yarn test --watch --reporter min",
+    "test:watch": "yarn test:only --recursive 'src/**/*.test.ts'",
     "test:cover": "nyc yarn test",
     "test:cover:open": "open coverage/lcov-report/index.html"
   },
