--- a/typescript/web-boilerplate/package.json
+++ b/typescript/web-boilerplate/package.json
@@ -40,6 +40,7 @@
     "@pgtyped/query": "^0.7.3",
     "@types/chai": "^4.2.11",
     "@types/chai-as-promised": "^7.1.2",
+    "@types/faker": "^4.1.12",
     "@types/glob": "^7.1.2",
     "@types/koa": "^2.11.3",
     "@types/koa-bodyparser": "^4.3.0",
@@ -56,6 +57,8 @@
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
+    "factory.ts": "^0.5.1",
+    "faker": "^4.1.0",
     "koa-bodyparser": "^4.3.0",
     "mocha": "^8.0.1",
     "npm-run-all": "^4.1.5",
