--- a/typescript/ports-and-adapters/.mocharc.yaml
+++ b/typescript/ports-and-adapters/.mocharc.yaml
@@ -1,10 +1,9 @@
 extension:
   - ts
 file:
-  - test/setup.ts
+  - test/hooks/hook.ts
+  - test/hooks/service-hook.ts
 require: 
   - ts-node/register/transpile-only
 ui: qunit
 inline-diffs: true
-globals": 
-  - td
