ϋ refactor: Create factory module

--- a/typescript/ports-and-adapters/package.json
+++ b/typescript/ports-and-adapters/package.json
@@ -75,6 +75,8 @@
   "_moduleAliases": {
     "@adapter": "./src/adapter/",
     "@protocol": "./src/protocol/",
+    "@factory": "./test/factory/",
+    "@core": "./src/core/",
     "@test": "./test/helper"
   }
 }
