--- a/typescript/ports-and-adapters/tsconfig.json
+++ b/typescript/ports-and-adapters/tsconfig.json
@@ -8,6 +8,8 @@
     "paths": {
         "@adapter/*": ["./src/adapter/*"],
         "@protocol/*": ["./src/protocol/*"],
+        "@core/*": ["./src/core/*"],
+        "@factory/*": ["./test/factory/*"],
         "@test": ["./test/helper"]
     },
     "noImplicitAny": true,
