--- a/typescript/ports-and-adapters/package.json
+++ b/typescript/ports-and-adapters/package.json
@@ -12,11 +12,12 @@
     "db:build": "dotenv -- pgtyped -c pgconfig.json",
     "db:migrate": "dotenv -- db-migrate",
     "lint": "eslint",
-    "test": "mocha -r ts-node/register --recursive 'src/**/*.test.ts'",
+    "test": "TS_NODE_FILES=true mocha -r ts-node/register --recursive 'src/**/*.test.ts'",
     "test:watch": "mocha -r ts-node/register/transpile-only --watch --reporter min --recursive 'src/**/*.test.ts'",
     "test:cover": "nyc yarn test",
     "test:cover:open": "open coverage/lcov-report/index.html",
-    "test:integration": "EXT_SERVICE=true mocha -r ts-node/register --recursive 'test/integration/**/*.test.ts'"
+    "test:integration": "EXT_SERVICE=true mocha -r ts-node/register --recursive 'test/integration/**/*.test.ts'",
+    "test:functional": "TS_NODE_FILES=true APP_SERVICE=true EXT_SERVICE=true mocha -r ts-node/register --recursive 'test/functional/**/*.test.ts'"
   },
   "dependencies": {
     "fp-ts": "^2.6.5",
@@ -38,6 +39,7 @@
     "@pgtyped/query": "^0.7.3",
     "@types/chai": "^4.2.11",
     "@types/chai-as-promised": "^7.1.2",
+    "@types/chai-http": "^4.2.0",
     "@types/faker": "^4.1.12",
     "@types/glob": "^7.1.2",
     "@types/koa": "^2.11.3",
@@ -51,6 +53,7 @@
     "@typescript-eslint/parser": "^3.2.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "chai-http": "^4.3.0",
     "db-migrate": "^0.11.11",
     "db-migrate-pg": "^1.2.2",
     "dotenv-cli": "^3.2.0",
