ϋ refactor: Remove test alias in favor of global

--- a/typescript/ports-and-adapters/package.json
+++ b/typescript/ports-and-adapters/package.json
@@ -79,7 +79,6 @@
     "@adapter": "./src/adapter/",
     "@protocol": "./src/protocol/",
     "@factory": "./test/factory/",
-    "@core": "./src/core/",
-    "@test": "./test/helper"
+    "@core": "./src/core/"
   }
 }
