--- a/typescript/ports-and-adapters/tsconfig.json
+++ b/typescript/ports-and-adapters/tsconfig.json
@@ -9,8 +9,7 @@
         "@adapter/*": ["./src/adapter/*"],
         "@protocol/*": ["./src/protocol/*"],
         "@core/*": ["./src/core/*"],
-        "@factory/*": ["./test/factory/*"],
-        "@test": ["./test/helper"]
+        "@factory/*": ["./test/factory/*"]
     },
     "noImplicitAny": true,
     "strictNullChecks": true,
