π test: Fix coverage report

--- a/typescript/ports-and-adapters/.nycrc.yaml
+++ b/typescript/ports-and-adapters/.nycrc.yaml
@@ -14,7 +14,8 @@ exclude:
   - "migrations"
   - "types"
   - "src/protocol"
-  - "**/storage.adapter"
+  - "src/**/storage.adapter"
+  - "src/**/*.test.ts"
   - "src/core/*/http.transport.ts"
   - "src/transport/http/respond.ts"
   - "src/app.ts"
