--- a/typescript/ports-and-adapters/package.json
+++ b/typescript/ports-and-adapters/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "run-p 'db:migrate up' start 'db:build -w'",
-    "start": "dotenv -- tsnd --rs false --no-notify src/index.ts | pino-pretty",
+    "start": "dotenv -- tsc-watch --onSuccess 'yarn --silent start:prod' | pino-pretty",
     "start:prod": "node src",
     "build": "tsc",
     "build:watch": "yarn build --noEmit --watch",
@@ -22,7 +22,6 @@
   },
   "dependencies": {
     "fp-ts": "^2.6.5",
-    "glob": "^7.1.6",
     "io-ts": "^2.2.5",
     "io-ts-reporters": "^1.1.0",
     "io-ts-types": "^0.5.7",
@@ -32,7 +31,8 @@
     "module-alias": "^2.2.2",
     "pg": "^8.2.1",
     "pino": "^6.3.2",
-    "ramda": "^0.27.0"
+    "ramda": "^0.27.0",
+    "koa-bodyparser": "^4.3.0"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
@@ -42,7 +42,6 @@
     "@types/chai-as-promised": "^7.1.2",
     "@types/chai-http": "^4.2.0",
     "@types/faker": "^4.1.12",
-    "@types/glob": "^7.1.2",
     "@types/koa": "^2.11.3",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-router": "^7.4.1",
@@ -63,17 +62,15 @@
     "eslint-plugin-prettier": "^3.1.3",
     "factory.ts": "^0.5.1",
     "faker": "^4.1.0",
-    "koa-bodyparser": "^4.3.0",
     "mocha": "^8.0.1",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "pino-pretty": "^4.0.0",
     "prettier": "^2.0.5",
-    "source-map-support": "^0.5.19",
     "testcontainers": "^2.14.0",
     "testdouble": "^3.16.0",
     "ts-node": "^8.10.2",
-    "ts-node-dev": "^1.0.0-pre.47",
+    "tsc-watch": "^4.2.9",
     "typescript": "^3.9.5"
   },
   "_moduleAliases": {
