--- a/fsharp/Meganezaru/Meganezaru.fsproj
+++ b/fsharp/Meganezaru/Meganezaru.fsproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <Compile Include="WeatherForecast.fs" />
     <Compile Include="Controllers/WeatherForecastController.fs" />
+    <Compile Include="EventHub.fs" />
     <Compile Include="Startup.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
