--- a/fsharp/Meganezaru/meganezaru/.eslintrc.json
+++ b/fsharp/Meganezaru/meganezaru/.eslintrc.json
@@ -1,5 +1,8 @@
 {
   "parser": "@typescript-eslint/parser",
+  "plugins": [
+      "baseui"
+  ],
   "extends": [
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
@@ -15,7 +18,10 @@
   },
   "rules": {
     "@typescript-eslint/explicit-function-return-type": "off",
-    "@typescript-eslint/explicit-module-boundary-types": "off"
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "baseui/deprecated-theme-api": "warn",
+    "baseui/deprecated-component-api": "warn",
+    "baseui/no-deep-imports": "warn"
   },
   "settings": {
     "react": {
