--- a/fsharp/Meganezaru/meganezaru/package.json
+++ b/fsharp/Meganezaru/meganezaru/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "baseui": "^9.91.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "styletron-engine-atomic": "^1.4.6",
+    "styletron-react": "^5.2.7",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -37,9 +40,13 @@
     ]
   },
   "devDependencies": {
+    "@types/styletron-engine-atomic": "^1.1.0",
+    "@types/styletron-react": "^5.0.2",
+    "@types/styletron-standard": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-baseui": "^9.85.2",
     "eslint-plugin-prettier": "^3.1.4",
     "msw": "^0.20.1",
     "prettier": "^2.0.5"
