ω fix: client folder conflicts with project folder

--- a/fsharp/Meganezaru/Meganezaru.fsproj
+++ b/fsharp/Meganezaru/Meganezaru.fsproj
@@ -2,6 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <OutputType>Exe</OutputType>
+    <PublishTrimmed>true</PublishTrimmed>
+    <PublishReadyToRun>true</PublishReadyToRun>
+    <PublishSingleFile>true</PublishSingleFile>
+    <RuntimeIdentifier>osx.10.14-x64</RuntimeIdentifier>
   </PropertyGroup>
 
   <ItemGroup>
