ω fix: Remove unnecessary setup

--- a/fsharp/Meganezaru/Meganezaru.fsproj
+++ b/fsharp/Meganezaru/Meganezaru.fsproj
@@ -1,19 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
     <OutputType>Exe</OutputType>
-    <PublishTrimmed>true</PublishTrimmed>
-    <PublishReadyToRun>true</PublishReadyToRun>
-    <PublishSingleFile>true</PublishSingleFile>
-    <RuntimeIdentifier>osx.10.14-x64</RuntimeIdentifier>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
-    <Compile Include="EventHub.fs" />
-    <Compile Include="Controllers/EventController.fs" />
+    <Compile Include="Event.fs" />
     <Compile Include="Startup.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
-
 </Project>
